增加mysql层的JDBC,用于创建数据表

--- a/sentiment-dao/src/main/resources/data_db.properties
+++ b/sentiment-dao/src/main/resources/data_db.properties
@@ -1,19 +1,5 @@
-db_username=root
-db_password=root
-
-# localhost
-db_url_local=jdbc:mysql://127.0.0.1:3306/weibo_sina
-
-# production
-db_url_production=jdbc:mysql://192.168.32.20:3306/weibo_sina
-
-# test
-db_url_test=jdbc:mysql://192.168.3.21:3306/weibo_sina
 
 # Sentiment Records DB
-sent.db.driver=com.mysql.jdbc.Driver
-sent.db.user=root
+sent.db.url=jdbc:mysql://localhost:3306/sentment_records
+sent.db.username=root
 sent.db.password=root
-sent.db.name=sentment_records
-sent.db.ip=localhost
-sent.db.port=3306
