--- a/sentiment-web/src/main/resources/data_db.properties
+++ b/sentiment-web/src/main/resources/data_db.properties
@@ -1,11 +1,5 @@
-db_username=root
-db_password=root
 
-# localhost
-db_url_local=jdbc:mysql://127.0.0.1:3306/weibo_sina
-
-# production
-db_url_production=jdbc:mysql://192.168.32.20:3306/weibo_sina
-
-# test
-db_url_test=jdbc:mysql://192.168.3.21:3306/weibo_sina
+# Sentiment Records DB
+sent.db.url=jdbc:mysql://192.168.3.22:3306/sentiment_records?useUnicode=true&characterEncoding=utf-8
+sent.db.username=sentimentrecords
+sent.db.password=zn/iACQ/Xh19+W6Ot2MghQ==
