--- a/sentiment-dao/src/test/resources/data_db.properties
+++ b/sentiment-dao/src/test/resources/data_db.properties
@@ -1,5 +1,8 @@
 
 # Sentiment Records DB
-sent.db.url=jdbc:mysql://192.168.3.22:3306/sentiment_records?useUnicode=true&characterEncoding=utf-8
-sent.db.username=sentimentrecords
-sent.db.password=zn/iACQ/Xh19+W6Ot2MghQ==
+sent.db.url=jdbc:mysql://127.0.0.1:3306/sentiment_records?useUnicode=true&characterEncoding=utf-8
+sent.db.username=root
+sent.db.password=root
+#sent.db.url=jdbc:mysql://192.168.32.17:3306/sentiment_records?useUnicode=true&characterEncoding=utf-8
+#sent.db.username=sentimentrecords
+#sent.db.password=zn/iACQ/Xh19+W6Ot2MghQ==
