--- a/sentiment-web/src/main/resources/data_db.properties
+++ b/sentiment-web/src/main/resources/data_db.properties
@@ -1,7 +1,15 @@
 
-# Sentiment Records DB
-# Note: special-data in hefei17
-#       sentiment-data in hefei08
-sent.db.url=jdbc:mysql://192.168.32.18:3306/sentiment_records?useUnicode=true&characterEncoding=utf-8
+##### Database #####
+# Product
+#sent.db.url=jdbc:mysql://192.168.32.17:3306/sentiment_records?useUnicode=true&characterEncoding=utf-8
+# Testing
+sent.db.url=jdbc:mysql://192.168.31.23:3306/sentiment_records?useUnicode=true&characterEncoding=utf-8
+
+##### Password #####
 sent.db.username=sentimentrecords
 sent.db.password=zn/iACQ/Xh19+W6Ot2MghQ==
+
+##### Localhost #####
+#sent.db.url=jdbc:mysql://localhost:3306/sentiment_records?useUnicode=true&characterEncoding=utf-8
+#sent.db.username=root
+#sent.db.password=root
