修改RedisMQ，增加索引写数据、Redis并发写数据测试

--- a/sentiment-spring/src/main/resources/data_db.properties
+++ b/sentiment-spring/src/main/resources/data_db.properties
@@ -1,9 +1,12 @@
 
 ##### Database #####
 # Product
+# OA
 #sent.db.url=jdbc:mysql://192.168.32.17:3306/sentiment_records?useUnicode=true&characterEncoding=utf-8
+# Records
+sent.db.url=jdbc:mysql://192.168.32.18:3306/sentiment_records?useUnicode=true&characterEncoding=utf-8
 # Testing
-sent.db.url=jdbc:mysql://192.168.31.23:3306/sentiment_records?useUnicode=true&characterEncoding=utf-8
+#sent.db.url=jdbc:mysql://192.168.31.23:3306/sentiment_records?useUnicode=true&characterEncoding=utf-8
 
 ##### Password #####
 sent.db.username=sentimentrecords
