修改全网任务source_id重复问题

--- a/sentiment-solr/src/main/resources/oracle_db.properties
+++ b/sentiment-solr/src/main/resources/oracle_db.properties
@@ -1,5 +1,7 @@
 
 ##### Product #####
+## HuaiNan 192.168.32.200
+## Shengting 192.168.32.36
 db_url=jdbc:oracle:thin:@192.168.32.36:1521:yqjk
 ##### Testing #####
 #db_url=jdbc:oracle:thin:@192.168.31.22:1521:yqjk
